...
                    android:layout_height="wrap_content"
                    android:text="Name: "
                    android:textColor="@color/dark_blue"
                    android:textSize="20dp" />

            <EditText
                android:id="@+id/et_ingredient_add_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name Here"

                android:imeOptions="actionNext"
                android:inputType="textPersonName|textCapWords"
...
                android:layout_height="wrap_content"
                android:text="Description: "
                android:textColor="@color/dark_blue"
                android:textSize="18dp"/>

            <EditText
                android:id="@+id/et_ingredient_add_edit_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Description Here"
                android:textColorHint="@color/blue"
                android:textSize="15dp"
                android:inputType="textCapSentences|textPersonName|textMultiLine"
...
                    android:layout_height="wrap_content"
                    android:textColor="@color/dark_blue"
                    android:text="Best Before Date: "
                    android:textSize="18dp"/>

                <DatePicker
                    android:id="@+id/dp_ingredient_add_edit_best_before_date"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:calendarViewShown="false"
                    android:datePickerMode="spinner"
                    android:spinnersShown="true"
                    android:theme="@style/MyDatePicker" />
...
                        android:textSize="10dp"
                        android:visibility="gone" />

                </LinearLayout>

                <Spinner
                    android:id="@+id/sp_ingredient_add_edit_location"
                    android:layout_height="48dp"
                    android:layout_width="match_parent"
                    android:backgroundTint="@color/light_blue"
                    android:textColor="@color/dark_blue"
                    android:layout_marginLeft="10dp"
                    android:scrollbarSize="200dp"/>
...
                        android:layout_height="wrap_content"
                        android:text="Amount: "
                        android:textColor="@color/dark_blue"
                        android:textSize="15dp" />

                    <EditText
                        android:id="@+id/et_ingredient_add_edit_amount"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:minHeight="48dp"
                        android:text="1"
                        android:maxLines="1"
...
                            android:visibility="gone" />


                    </LinearLayout>

                    <Spinner
                        android:id="@+id/sp_ingredient_add_edit_unit"
                        android:layout_width="match_parent"
                        android:layout_height="40sp"
                        android:backgroundTint="@color/light_blue"
                        android:textColor="@color/dark_blue"
                        />
                </LinearLayout>
...
                        android:textColor="@color/black"
                        android:textSize="10dp"
                        android:visibility="gone" />
                </LinearLayout>

                <Spinner
                    android:id="@+id/sp_ingredient_add_edit_category"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:backgroundTint="@color/light_blue"
                    android:textColor="@color/dark_blue" />
            </LinearLayout>

...
                    android:layout_weight="1"
                    android:text="CANCEL"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />

                <Button
                    android:id="@+id/btn_ingredient_add_edit_save"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:text="SAVE"
                    android:textColor="@color/black"
                    tools:ignore="TouchTargetSizeCheck" />

            </LinearLayout>

        </LinearLayout>
...
